@@ -11,6 +11,12 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-01-07
+2013-11-21 Andy Salnikov
+- Dataset::files(): when searching for files check file type only after
+  file name matches. Could help if check causes troubles (like I/O error
+  that we saw on Luster)
+
 Tag: V00-01-06
 2013-09-17 Andy Salnikov
 - documentation generation changed in SConsTools, updating SConscript
